[package]
name = "laminar"
version = "0.1.0"
edition = "2024"
repository = "https://github.com/miolini/laminar"

[dependencies]
quinn = "0.11"
tokio = { version = "1.36", features = ["full"] }
bytes = "1.5"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
tun = { version = "0.6", features = ["async"] }
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0"
futures = "0.3"
thiserror = "1.0"
dashmap = "5.5"
rand = "0.8"
rcgen = "0.12"
ring = "0.17"
rustls = { version = "0.23", features = ["ring"] }
clap = { version = "4.5.54", features = ["derive"] }
rustls-pemfile = "2.2.0"
socket2 = "0.6.1"
axum = "0.8.8"
serde_json = "1.0.149"
ratatui = "0.30.0"
crossterm = "0.29.0"
reqwest = { version = "0.13.1", features = ["json"] }
base64 = "0.22"

